# lagom_firmware

./: Cargo.toml  README.md
.cargo/: config.toml
src/: clock.rs  descriptor.rs  keymap.rs  main.rs
src/std_stub/: mod.rs
