[package]
name = "lagom-firmware"
version = "0.1.0"
authors = ["Michael Darr <michael.e.darr@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "lagom-firmware"
test = false
bench = false

[dependencies]
avr-device = "0.5.2"
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "7b3e82a15e97e657559ec82cf934ba36c38312ec"
features = ["sparkfun-promicro"]

[dependencies.avr-hal-generic]
git = "https://github.com/rahix/avr-hal"
rev = "7b3e82a15e97e657559ec82cf934ba36c38312ec"

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
