[package]
name = "lagom-firmware"
version = "0.1.0"
authors = ["Michael Darr <michael.e.darr@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "lagom-firmware"
test = false
bench = false

[dependencies]
usbd-hid = "0.6"
usb-device = "0.2"

[dependencies.avr-device]
version = "0.5.2"
features = ["atmega32u4"]

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "7b3e82a15e97e657559ec82cf934ba36c38312ec"
features = ["sparkfun-promicro"]

[dependencies.avr-hal-generic]
git = "https://github.com/rahix/avr-hal"
rev = "7b3e82a15e97e657559ec82cf934ba36c38312ec"

[dependencies.atmega-usbd]
git = "https://github.com/agausmann/atmega-usbd"
rev = "5fc68ca813ce0a37dab65dd4d66efe1ec125f2a8"

[profile.dev]
lto = true
opt-level = "s"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
